--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     </nav>    
     
     <header>
-        <img id="banner" src="images/banner.png" alt="imagen de X">
+        <img id="banner" src="img/banner.png" alt="imagen de X">
     </header>
     
 
