--- a/index2.html
+++ b/index2.html
@@ -18,16 +18,14 @@
     
   <main>
 
- 
     <h1>Supernatural (2005)</h1>
+    <br>
 
     <section>
-        <img src="img/supernatural-2005.jpg" alt="Supernatural Poster">
-        <iframe height="480" width="640" src="https://www.youtube.com/embed/0L30y8ern3M?autoplay=1"></iframe>
-    </section>
-
-
-    <label for="season">Temporadas:
+       <!--<img src="img/supernatural-2005.jpg" alt="Supernatural Poster">-->
+      <iframe class=columna height="480" width="640" src="https://www.youtube.com/embed/0L30y8ern3M?autoplay=1"></iframe>
+      <div class="columna">
+        <label for="season">Temporadas:
         <select id="season" name="season">
           <option value="">Seleccionar</option>
           <option value="1">Temporada 1</option>
@@ -75,12 +73,15 @@
           <option value="22">Capítulo 22</option>
         </select>
       </label>
+      <br>
 
     <div class="details">
+      <br>
       <p><strong>Género:</strong> Comedia</p>
-      <p><strong>Actores:</strong> Josh Radnor, Jason Segel, Alyson Lee Hannigan,<br>
-        Jacoba Francisca Maria Smulders, Neil Patrick Harris</p>
-    </div>
+      <br>
+      <p><strong>Actores:</strong> Josh Radnor, Jason Segel, Alyson Lee Hannigan,
+        Jacoba Francisca Maria Smulder</p>
+      <br>
 
     <div class="synopsis">
       <p>
@@ -90,6 +91,15 @@
         todo tipo de amenaza sobrenatural que encuentran en el camino.
       </p>
     </div>
+
+
+
+      </div>
+
+    </section>
+
+
+    
 
 
 
