--- a/serie-supernatural.html
+++ b/serie-supernatural.html
@@ -25,7 +25,7 @@
        <!--<img src="img/supernatural-2005.jpg" alt="Supernatural Poster">-->
       <iframe class=columna height="480" width="640" src="https://www.youtube.com/embed/0L30y8ern3M?autoplay=1"></iframe>
       <div class="columna">
-        <label for="season">Temporadas:
+        <label for="season">Temporada:
         <select id="season" name="season">
           <option value="">Seleccionar</option>
           <option value="1">Temporada 1</option>
