--- a/series.html
+++ b/series.html
@@ -9,10 +9,10 @@
 
   <header>
     <ul>
-        <li>🏠 Home</li>
-        <li>📺 Series</li>
-        <li>🎬 Películas</li>
-        <li>👤 Perfil</li>
+        <li><a href="principal.html">🏠 Home</a></li>
+        <li><a href="series.html">📺 Series</a></li>
+        <li><a href="peliculas.html">🎬 Películas</a></li>
+        <li><a href="user.html">👤 Perfil</a></li>
     </ul>    
   </header>
 
@@ -21,11 +21,15 @@
     <h2>Series</h2>
     <img src="img/american-dad-2005.jpg">
     <img src="img/cobra-kai-2018.jpg">
-    <img src="img/dos-hombres-y-medio-2003.jpg">
+    <a href="serie-supernatural.html"><img src="img/supernatural-2005.jpg"></a>
     <img src="img/el-chavo-del-ocho-1972.jpg">
     <img src="img/game-of-thrones-2011.jpg">
     <img src="img/malcolm-in-the-middle-2000.jpg">
 
   </main>
+  
+    <footer>
+        <p>Diseñado por Luis Spataro 2025</p>
+    </footer>
 
 </body>
