--- a/principal.html
+++ b/principal.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-  <header>
+<header>
     <ul>
-        <li>🏠 Home</li>
-        <li>📺 Series</li>
-        <li>🎬 Películas</li>
-        <li>👤 Perfil</li>
+        <li><a href="principal.html">🏠 Home</a></li>
+        <li><a href="series.html">📺 Series</a></li>
+        <li><a href="movie.html">🎬 Películas</a></li>
+        <li><a href="user.html">👤 Perfil</a></li>
     </ul>    
   </header>
 
@@ -22,12 +22,12 @@
     <img src="img/estado-electrico-2025.jpg" alt="">
     <img src="img/capitan-america-brave-new-world-2025.jpg" alt="">
     <img src="img/lilo-y-stitch-2002.jpg" alt="">
-    <img src="img/novocaine-2025.jpg" alt="">
+    <img src="img/guerra-mundial-z-2013.jpg" alt="">
     <img src="img/una-pelicula-de-minecraft-2025.jpg" alt="">
     <h2>Series</h2>
     <img src="img/american-dad-2005.jpg">
     <img src="img/cobra-kai-2018.jpg">
-    <img src="img/dos-hombres-y-medio-2003.jpg">
+    <a href="serie-supernatural.html"><img src="img/supernatural-2005.jpg"></a>
     <img src="img/el-chavo-del-ocho-1972.jpg">
     <img src="img/game-of-thrones-2011.jpg">
     <img src="img/malcolm-in-the-middle-2000.jpg">
