--- a/principal.html
+++ b/principal.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Supernatural</title>
   <link rel="stylesheet" href="css/styles2.css">
 </head>
+
 <body>
 
-<header>
+  <header>
     <ul>
-        <li><a href="principal.html">🏠 Home</a></li>
-        <li><a href="series.html">📺 Series</a></li>
-        <li><a href="movie.html">🎬 Películas</a></li>
-        <li><a href="user.html">👤 Perfil</a></li>
-    </ul>    
+      <li><a href="principal.html">🏠 Home</a></li>
+      <li><a href="series.html">📺 Series</a></li>
+      <li><a href="movie.html">🎬 Películas</a></li>
+      <li><a href="user.html">👤 Perfil</a></li>
+    </ul>
   </header>
 
   <main>
-    <h2>Peliculas</h2>
-    <img src="img/blancanieves-2025.jpg">
-    <img src="img/estado-electrico-2025.jpg" alt="">
-    <img src="img/capitan-america-brave-new-world-2025.jpg" alt="">
-    <img src="img/lilo-y-stitch-2002.jpg" alt="">
-    <img src="img/guerra-mundial-z-2013.jpg" alt="">
-    <img src="img/una-pelicula-de-minecraft-2025.jpg" alt="">
+    <h2>Películas</h2>
+    <img class="miniatura" src="img/blancanieves-2025.jpg" alt="Blancanieves (2025)">
+    <img class="miniatura" src="img/estado-electrico-2025.jpg" alt="Estado Eléctrico (2025)">
+    <img class="miniatura" src="img/capitan-america-brave-new-world-2025.jpg"
+      alt="Capitán América: Brave New World (2025)">
+    <img class="miniatura" src="img/lilo-y-stitch-2002.jpg" alt="Lilo y Stitch (2002)">
+    <img class="miniatura" src="img/guerra-mundial-z-2013.jpg" alt="Guerra Mundial Z (2013)">
+    <img class="miniatura" src="img/una-pelicula-de-minecraft-2025.jpg" alt="Una Película de Minecraft (2025)">
+
     <h2>Series</h2>
-    <img src="img/american-dad-2005.jpg">
-    <img src="img/cobra-kai-2018.jpg">
-    <a href="serie-supernatural.html"><img src="img/supernatural-2005.jpg"></a>
-    <img src="img/el-chavo-del-ocho-1972.jpg">
-    <img src="img/game-of-thrones-2011.jpg">
-    <img src="img/malcolm-in-the-middle-2000.jpg">
+    <img class="miniatura" src="img/american-dad-2005.jpg" alt="American Dad (2005)">
+    <img class="miniatura" src="img/cobra-kai-2018.jpg" alt="Cobra Kai (2018)">
+    <img class="miniatura" src="img/supernatural-2005.jpg" alt="Supernatural (2005)">
+    <img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg" alt="El Chavo del 8 (1972)">
+    <img class="miniatura" src="img/game-of-thrones-2011.jpg" alt="Game of Thrones (2011)">
+    <img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg" alt="Malcolm in the Middle (2000)">
 
   </main>
 
