--- a/user.html
+++ b/user.html
@@ -22,45 +22,69 @@
 
         <h1>Datos Usuario</h1>
 
-        <form class="form-dos-columnas">
-            <section class="columna">
-                <div class="avatar">
-                <img src="https://via.placeholder.com/100" alt="Avatar de usuario">
-                <p>nombre de usuario</p>
-                </div>
+        <form>
 
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" value="usuario@gmail.com" disabled>
+            <div class="form_columnas">
 
-                <label for="password">Contraseña actual</label>
-                <input type="password" id="password" name="password" value="**********" disabled>
+                <section class="columna_1">
+                    <img id="avatar" src="img/avatar.jpg" alt="Avatar de usuario">
+                    <p>nombre de usuario</p>
+                </section>
 
-                <label for="new-password">Nueva contraseña</label>
-                <input type="password" id="new-password" name="new_password" placeholder="Ingrese nueva contraseña">
+                <section class="columna_2">
 
-                <label for="repeat-password">Repetir contraseña</label>
-                <input type="password" id="repeat-password" name="repeat_password" placeholder="Ingrese nueva contraseña">
-            </section>
-            
-            <section class="columna">
-                <h2>Método de pago</h2>
+                    <div class="ordenar">
+                        <p class="a_izquierda">E-mail</p>
+                        <p class="a_derecha">usuario@gmail.com</p>
+                    </div>
 
-                <label><input type="radio" name="metodo_pago" value="tarjeta"> Tarjeta de crédito</label><br>
-                <input type="text" name="tarjeta_credito" maxlength="16" placeholder="Número de tarjeta">
-                <input type="password" name="pin" maxlength="3" placeholder="XXX">
+                    <div class="ordenar">
+                        <p class="a_izquierda">Contraseña actual</p>
+                        <p class="a_derecha">**********</p>
+                        <br>
+                    </div>
 
-                <label><input type="radio" name="metodo_pago" value="cupon"> Cupón de pago</label><br>
-                <label><input type="checkbox" name="cupon" value="pago-facil"> Pago fácil</label>
-                <label><input type="checkbox" name="cupon" value="rapipago"> RapiPago</label><br>
+                    <div class="ordenar">
+                        <label class="a_izquierda" for="new-password">Nueva contraseña</label>
+                        <input class="a_derecha" type="password" id="new-password" name="new_password"
+                            placeholder="Ingrese nueva contraseña">
+                        <br>
+                    </div>
 
-                <label><input type="radio" name="metodo_pago" value="transferencia"> Transferencia bancaria</label><br>
-                <p>CBU : 2183909411100018971375</p>
-            </section>
+                    <div class="ordenar">
+                        <label class="a_izquierda" for="repeat-password">Repetir contraseña</label>
+                        <input class="a_derecha" type="password" id="repeat-password" name="repeat_password"
+                            placeholder="Ingrese nueva contraseña">
+                    </div>
 
-            <!-- Botones -->
+                </section>
+
+                <section class="columna_2">
+                    <h2>Método de pago</h2>
+                    <br>
+                    <label><input type="radio" name="metodo_pago" value="tarjeta"> Tarjeta de crédito</label>
+                    <br><br>
+                    <input type="text" name="tarjeta_credito" maxlength="16" placeholder="Número de tarjeta">
+                    <input type="password" name="pin" maxlength="3" placeholder="XXX">
+                    <br><br>
+                    <label><input type="radio" name="metodo_pago" value="cupon"> Cupón de pago</label>
+                    <br><br>
+                    <label><input type="checkbox" name="cupon" value="pago-facil"> Pago fácil</label>
+                    <label><input type="checkbox" name="cupon" value="rapipago"> RapiPago</label>
+                    <br><br>
+                    <label><input type="radio" name="metodo_pago" value="transferencia"> Transferencia
+                        bancaria</label>
+                    <br>
+                    <p>CBU : 2183909411100018971375</p>
+                </section>
+
+            </div>
+
+            <br><br>
+
             <div class="botones">
-                <button type="submit" class="guardar">Guardar cambios</button>
-                <button type="button" class="cancelar">Cancelar suscripción</button>
+                <button type="submit" class="boton guardar">Guardar cambios</button>
+                <button type="button" class="boton cancelar">Cancelar suscripción</button>
             </div>
         </form>
 
