--- a/login.html
+++ b/login.html
@@ -3,25 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>login</title>
 </head>
 <body> 
-    
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="logo.png" alt="logo empresa">
-            </div>
-            <ul>
-                <li><a href="principal.html"><span class="material-icons">home</span>Inicio</a></li>
-                <li><a href="movie.html"><span class="material-icons">movie</span>Películas</a></li>
-                <li><a href="serie.html"><span class="material-icons">tv</span>Series</a></li>
-                <li><a href="user.html"><span class="material-icons">person</span>Usuario</a></li>
-            </ul>
-        </nav>    
-    </header>
 
     <header>
         <img id="banner" src="img/banner.png" alt="banner presentación de la plataforma">
