--- a/principal.html
+++ b/principal.html
@@ -22,23 +22,38 @@
     <br><br>
     <h2>Películas</h2>
     <br><br>
-    <img class="miniatura" src="img/blancanieves-2025.jpg" alt="Blancanieves (2025)">
-    <img class="miniatura" src="img/estado-electrico-2025.jpg" alt="Estado Eléctrico (2025)">
-    <img class="miniatura" src="img/capitan-america-brave-new-world-2025.jpg"
-      alt="Capitán América: Brave New World (2025)">
-    <img class="miniatura" src="img/lilo-y-stitch-2002.jpg" alt="Lilo y Stitch (2002)">
-    <img class="miniatura" src="img/guerra-mundial-z-2013.jpg" alt="Guerra Mundial Z (2013)">
-    <img class="miniatura" src="img/una-pelicula-de-minecraft-2025.jpg" alt="Una Película de Minecraft (2025)">
+    <a href="pelicula-blancanieves-2025.html"><img class="miniatura" src="img/blancanieves-2025.jpg"
+        alt="Blancanieves (2025)"></a>
+    <a href="pelicula-estado-electrico-2025.html"><img class="miniatura" src="img/estado-electrico-2025.jpg"
+        alt="Estado Eléctrico (2025)"></a>
+    <a href="pelicula-capitan-america-brave-new-world-2025.html"><img class="miniatura"
+        src="img/capitan-america-brave-new-world-2025.jpg" alt="Capitán América: Brave New World (2025)"></a>
+    <a href="pelicula-lilo-y-stitch-2002.html"><img class="miniatura" src="img/lilo-y-stitch-2002.jpg"
+        alt="Lilo y Stitch (2002)"></a>
+    <a href="pelicula-guerra-mundial-z-2013.html"><img class="miniatura" src="img/guerra-mundial-z-2013.jpg"
+        alt="Guerra Mundial Z (2013)"></a>
+    <a href="pelicula-una-pelicula-de-minecraft-2025.html"><img class="miniatura"
+        src="img/una-pelicula-de-minecraft-2025.jpg" alt="Una Película de Minecraft (2025)"></a>
+
     <br><br>
     <h2>Series</h2>
     <br><br>
-    <img class="miniatura" src="img/american-dad-2005.jpg" alt="American Dad (2005)">
-    <img class="miniatura" src="img/cobra-kai-2018.jpg" alt="Cobra Kai (2018)">
-    <img class="miniatura" src="img/supernatural-2005.jpg" alt="Supernatural (2005)">
-    <img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg" alt="El Chavo del 8 (1972)">
-    <img class="miniatura" src="img/game-of-thrones-2011.jpg" alt="Game of Thrones (2011)">
-    <img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg" alt="Malcolm in the Middle (2000)">
+    <a href="serie-american-dad-2005.html"><img class="miniatura" src="img/american-dad-2005.jpg"
+        alt="American Dad (2005)"></a>
+    <a href="serie-cobra-kai-2018.html"><img class="miniatura" src="img/cobra-kai-2018.jpg" alt="Cobra Kai (2018)"></a>
+    <a href="serie-supernatural-2005.html"><img class="miniatura" src="img/supernatural-2005.jpg"
+        alt="Supernatural (2005)"></a>
+    <a href="serie-el-chavo-del-ocho-1972.html"><img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg"
+        alt="El Chavo del 8 (1972)"></a>
+    <a href="serie-game-of-thrones-2011.html"><img class="miniatura" src="img/game-of-thrones-2011.jpg"
+        alt="Game of Thrones (2011)"></a>
+    <a href="serie-malcolm-in-the-middle-2000.html"><img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg"
+        alt="Malcolm in the Middle (2000)"></a>
 
   </main>
+
+  <footer>
+    <p>Diseñado por Luis Spataro 2025</p>
+  </footer>
 
 </body>
