--- a/registro.html
+++ b/registro.html
@@ -65,3 +65,7 @@
         <button type="submit">Confirmar</button>
         <button type="submit">Cancelar</button>
     </form>
+
+        <footer>
+        <p>Diseñado por Luis Spataro 2025</p>
+    </footer>
