--- a/series.html
+++ b/series.html
@@ -17,14 +17,16 @@
   </header>
 
   <main>
-    
+    <br><br>
     <h2>Series</h2>
-    <img src="img/american-dad-2005.jpg">
-    <img src="img/cobra-kai-2018.jpg">
-    <a href="serie-supernatural.html"><img src="img/supernatural-2005.jpg"></a>
-    <img src="img/el-chavo-del-ocho-1972.jpg">
-    <img src="img/game-of-thrones-2011.jpg">
-    <img src="img/malcolm-in-the-middle-2000.jpg">
+    <br><br>
+    <a href="serie-american-dad-2005.html"><img class="miniatura" src="img/american-dad-2005.jpg" alt="American Dad (2005)"></a>
+    <a href="serie-cobra-kai-2018.html"><img class="miniatura" src="img/cobra-kai-2018.jpg" alt="Cobra Kai (2018)"></a>
+    <a href="serie-supernatural-2005.html"><img class="miniatura" src="img/supernatural-2005.jpg" alt="Supernatural (2005)"></a>
+    <a href="serie-el-chavo-del-ocho-1972.html"><img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg" alt="El Chavo del 8 (1972)"></a>
+    <a href="serie-game-of-thrones-2011.html"><img class="miniatura" src="img/game-of-thrones-2011.jpg" alt="Game of Thrones (2011)"></a>
+    <a href="serie-malcolm-in-the-middle-2000.html"><img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg" alt="Malcolm in the Middle (2000)"></a>
+
 
   </main>
   
