--- a/movie.html
+++ b/movie.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Supernatural</title>
-  <link rel="stylesheet" href="css/styles2.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 </head>
+
 <body>
 
   <header>
     <ul>
-        <li><a href="principal.html">🏠 Home</a></li>
-        <li><a href="series.html">📺 Series</a></li>
-        <li><a href="movie.html">🎬 Películas</a></li>
-        <li><a href="user.html">👤 Perfil</a></li>
-    </ul>    
+      <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
+
+      <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
+
+      <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
+
+      <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
+
+      <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+
+    </ul>
   </header>
 
   <main>
-    
+
     <h2>Peloculas</h2>
     <img src="img/blancanieves-2025.jpg">
     <img src="img/estado-electrico-2025.jpg">
@@ -28,8 +37,8 @@
 
   </main>
 
-    <footer>
-      <p>Diseñado por Luis Spataro 2025</p>
-    </footer>
+  <footer>
+    <p>Diseñado por Luis Spataro 2025</p>
+  </footer>
 
 </body>
