--- a/series.html
+++ b/series.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Supernatural</title>
-  <link rel="stylesheet" href="css/styles2.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
+
 <body>
 
   <header>
     <ul>
-        <li><a href="principal.html">🏠 Home</a></li>
-        <li><a href="series.html">📺 Series</a></li>
-        <li><a href="peliculas.html">🎬 Películas</a></li>
-        <li><a href="user.html">👤 Perfil</a></li>
-    </ul>    
+      <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
+
+      <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
+
+      <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
+
+      <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
+
+      <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+
+    </ul>
   </header>
 
   <main>
     <br><br>
     <h2>Series</h2>
     <br><br>
-    <a href="serie-american-dad-2005.html"><img class="miniatura" src="img/american-dad-2005.jpg" alt="American Dad (2005)"></a>
+    <a href="serie-american-dad-2005.html"><img class="miniatura" src="img/american-dad-2005.jpg"
+        alt="American Dad (2005)"></a>
     <a href="serie-cobra-kai-2018.html"><img class="miniatura" src="img/cobra-kai-2018.jpg" alt="Cobra Kai (2018)"></a>
-    <a href="serie-supernatural-2005.html"><img class="miniatura" src="img/supernatural-2005.jpg" alt="Supernatural (2005)"></a>
-    <a href="serie-el-chavo-del-ocho-1972.html"><img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg" alt="El Chavo del 8 (1972)"></a>
-    <a href="serie-game-of-thrones-2011.html"><img class="miniatura" src="img/game-of-thrones-2011.jpg" alt="Game of Thrones (2011)"></a>
-    <a href="serie-malcolm-in-the-middle-2000.html"><img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg" alt="Malcolm in the Middle (2000)"></a>
+    <a href="serie-supernatural-2005.html"><img class="miniatura" src="img/supernatural-2005.jpg"
+        alt="Supernatural (2005)"></a>
+    <a href="serie-el-chavo-del-ocho-1972.html"><img class="miniatura" src="img/el-chavo-del-ocho-1972.jpg"
+        alt="El Chavo del 8 (1972)"></a>
+    <a href="serie-game-of-thrones-2011.html"><img class="miniatura" src="img/game-of-thrones-2011.jpg"
+        alt="Game of Thrones (2011)"></a>
+    <a href="serie-malcolm-in-the-middle-2000.html"><img class="miniatura" src="img/malcolm-in-the-middle-2000.jpg"
+        alt="Malcolm in the Middle (2000)"></a>
 
 
   </main>
-  
-    <footer>
-        <p>Diseñado por Luis Spataro 2025</p>
-    </footer>
+
+  <footer>
+    <p>Diseñado por Luis Spataro 2025</p>
+  </footer>
 
 </body>
+
+</html>
