--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Supernatural</title>
-  <link rel="stylesheet" href="css/styles2.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
