--- a/serie-supernatural-2005.html
+++ b/serie-supernatural-2005.html
@@ -3,18 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Supernatural</title>
-  <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
+
 <body>
 
-  <header>
-    <ul>
-        <li><a href="principal.html">🏠 Home</a></li>
-        <li><a href="series.html">📺 Series</a></li>
-        <li><a href="peliculas.html">🎬 Películas</a></li>
-        <li><a href="user.html">👤 Perfil</a></li>
-    </ul>    
-  </header>
+    <header>
+        <ul>
+            <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
+
+            <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
+
+            <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
+
+            <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
+
+            <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+
+        </ul>
+    </header>
     
   <main>
 
