--- a/user.html
+++ b/user.html
@@ -4,17 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Supernatural</title>
-    <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 
 <body>
 
     <header>
         <ul>
-            <li><a href="principal.html">🏠 Home</a></li>
-            <li><a href="series.html">📺 Series</a></li>
-            <li><a href="peliculas.html">🎬 Películas</a></li>
-            <li><a href="user.html">👤 Perfil</a></li>
+            <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
+
+            <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
+
+            <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
+
+            <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
+
+            <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+
         </ul>
     </header>
 
@@ -83,8 +90,11 @@
             <br><br>
 
             <div class="botones">
-                <button type="submit" class="boton guardar">Guardar cambios</button>
-                <button type="button" class="boton cancelar">Cancelar suscripción</button>
+                <!--se cambio de type=submit a button para que pueda dirigir a principal-->
+                <button onclick="window.location.href='principal.html'" type="button" class="boton guardar">Guardar
+                    cambios</button>
+                <button onclick="window.location.href='login.html'" type="button" class="boton cancelar">Cancelar
+                    suscripción</button>
             </div>
         </form>
 
