--- a/principal.html
+++ b/principal.html
@@ -26,6 +26,21 @@
   </header>
 
   <main>
+
+    <div class="contenedor">
+      <label for="categoria" class="label-categoria">Categorías</label>
+      <select id="categoria" name="categoria">
+        <option value="">Seleccionar categoría</option>
+        <option value="drama">Drama</option>
+        <option value="suspenso">Suspenso</option>
+        <option value="comedia">Comedia</option>
+        <option value="animada">Animada</option>
+        <option value="terror">Terror</option>
+        <option value="policial">Policial</option>
+      </select>
+
+      <input type="text" placeholder="Buscar por nombre">
+    </div>
     <br><br>
     <h2>Películas</h2>
     <br><br>
