--- a/serie-supernatural-2005.html
+++ b/serie-supernatural-2005.html
@@ -89,8 +89,13 @@
           <br>
           <p><strong>Género:</strong> Comedia</p>
           <br>
-          <p><strong>Actores:</strong> Josh Radnor, Jason Segel, Alyson Lee Hannigan,
-            Jacoba Francisca Maria Smulder</p>
+          <p><strong>Actores:</strong>
+            <a href="https://es.wikipedia.org/wiki/Jared_Padalecki" target="_blank">Jared Padalecki</a>,
+            <a href="https://es.wikipedia.org/wiki/Jensen_Ackles" target="_blank">Jensen Ackles</a>,
+            <a href="https://es.wikipedia.org/wiki/Misha_Collins" target="_blank">Misha Collins</a>,
+            <a href="https://es.wikipedia.org/wiki/Mark_Sheppard" target="_blank">Mark Sheppard</a>,
+            <a href="https://es.wikipedia.org/wiki/Katie_Cassidy" target="_blank">Katie Cassidy</a>
+          </p>
           <br>
 
           <div class="synopsis">
@@ -108,6 +113,8 @@
 
 
         </div>
+
+        <button onclick="window.location.href='principal.html'" type="button" class="boton guardar">Comenzar</button>
 
     </section>
 
@@ -127,7 +134,7 @@
             alt="Lilo y Stitch (2002)"></a>
         <a href="pelicula-guerra-mundial-z-2013.html"><img class="miniatura" src="img/guerra-mundial-z-2013.jpg"
             alt="Guerra Mundial Z (2013)"></a>
-        
+
       </div>
     </section>
 
