--- a/registro.html
+++ b/registro.html
@@ -90,7 +90,7 @@
             <div class="botones">
                 <!--se cambio de type=submit a button para que pueda dirigir a principal-->
                 <button onclick="window.location.href='principal.html'"type="button" class="boton guardar">Guardar cambios</button>
-                <button onclick="window.location.href='login.html'"type="button" class="boton cancelar">Cancelar suscripción</button>
+                <button onclick="window.location.href='index.html'"type="button" class="boton cancelar">Cancelar suscripción</button>
             </div>
         </form>
     </main>
