--- a/peliculas.html
+++ b/peliculas.html
@@ -20,7 +20,7 @@
 
             <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
 
-            <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+            <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
 
         </ul>
     </header>
