--- a/reset_password.html
+++ b/reset_password.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <main>
-        <form>
+    <main class="recuperar_contrasenia">
+        <form class="">
             <div class="ordenar">
                 <label class="a_izquierda" for="new-password">Nueva contraseña</label>
                 <input class="a_derecha" type="password" id="new-password" name="new_password"
@@ -26,7 +26,7 @@
 
             <div class="botones">
                 <button type="submit" class="boton guardar">Envia mail</button>
-                <button onclick="window.location.href='login.html'" type="button" class="boton cancelar">Cancelar</button>
+                <button onclick="window.location.href='index.html'" type="button" class="boton cancelar">Cancelar</button>
                 <!--<a href="login.html" class="boton cancelar">Cancelar</a>-->
             </div>
 
