--- a/user.html
+++ b/user.html
@@ -20,7 +20,7 @@
 
             <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
 
-            <li><a href="login.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
+            <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
 
         </ul>
     </header>
@@ -93,7 +93,7 @@
                 <!--se cambio de type=submit a button para que pueda dirigir a principal-->
                 <button onclick="window.location.href='principal.html'" type="button" class="boton guardar">Guardar
                     cambios</button>
-                <button onclick="window.location.href='login.html'" type="button" class="boton cancelar">Cancelar
+                <button onclick="window.location.href='index.html'" type="button" class="boton cancelar">Cancelar
                     suscripción</button>
             </div>
         </form>
