--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         </form>
 
         <div class="links_login">
-            <a href="reset_password.html">Recuperar Contraseña</a>
-            <br><br>
-            <a href="registro.html">Registrarse</a>
+            <a class="links" href="reset_password.html">Recuperar Contraseña<br><br></a>
+            <a class="links" href="registro.html">Registrarse</a>
         </div>
 
 
