--- a/serie-american-dad-2005.html
+++ b/serie-american-dad-2005.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Supernatural</title>
+  <title>American Dad</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
@@ -13,27 +13,20 @@
   <header>
     <ul>
       <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
-
       <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
-
       <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
-
       <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
-
-      <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
-
+      <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesión</a></li>
     </ul>
   </header>
 
   <main>
 
-    <h1>Supernatural (2005)</h1>
+    <h1>American Dad (2005)</h1>
     <br>
 
     <section class="principal">
-      <!--<img src="img/supernatural-2005.jpg" alt="Supernatural Poster">-->
-      <iframe class=columna height="480" width="640"
-        src="https://www.youtube.com/embed/0L30y8ern3M?autoplay=1"></iframe>
+      <iframe class="columna" width="640" height="480" src="https://www.youtube.com/embed/apr31MFjg08?si=CMaUMLX7CZbj6MB1" frameborder="0" allowfullscreen></iframe>
       <div class="columna">
         <label for="season"><strong>Temporada:</strong>
           <select id="season" name="season">
@@ -53,6 +46,9 @@
             <option value="13">Temporada 13</option>
             <option value="14">Temporada 14</option>
             <option value="15">Temporada 15</option>
+            <option value="16">Temporada 16</option>
+            <option value="17">Temporada 17</option>
+            <option value="18">Temporada 18</option>
           </select>
         </label>
 
@@ -87,40 +83,27 @@
 
         <div class="details">
           <br>
-          <p><strong>Género:</strong> Comedia</p>
+          <p><strong>Género:</strong> Comedia, Animación</p>
           <br>
           <p><strong>Actores:</strong>
-            <a class="links" href="https://es.wikipedia.org/wiki/Jared_Padalecki" target="_blank">Jared Padalecki</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Jensen_Ackles" target="_blank">Jensen Ackles</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Misha_Collins" target="_blank">Misha Collins</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Mark_Sheppard" target="_blank">Mark Sheppard</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Katie_Cassidy" target="_blank">Katie Cassidy</a>
+            <a class="links" href="https://es.wikipedia.org/wiki/Seth_MacFarlane" target="_blank">Seth MacFarlane</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Wendy_Schatzberg" target="_blank">Wendy Schaal</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Scott_Grimes" target="_blank">Scott Grimes</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Rachael_MacFarlane" target="_blank">Rachael MacFarlane</a>
           </p>
           <br>
 
           <div class="synopsis">
             <p>
-              Cuando eran niños, Sam y Dean Winchester, perdieron a su madre debido a una misteriosa y demoníaca fuerza
-              supernatural. Posteriormente,
-              su padre los crió para que fueran soldados. Él les enseñó sobre el mal que vive en los rincones obscuros y
-              en las carreteras secundarias
-              de América… y también les enseñó cómo matarlo. Ahora los hermanos Winchester recorren el país en su Chevy
-              Impala del '67, luchando contra
-              todo tipo de amenaza sobrenatural que encuentran en el camino.
+              "American Dad" sigue las aventuras de Stan Smith, un agente de la CIA extremadamente patriótico y su peculiar familia, que incluye a su esposa Francine, sus hijos Hayley y Steve, un extraterrestre llamado Roger y un pez que habla llamado Klaus. La serie es conocida por su humor satírico y situaciones absurdas.
             </p>
           </div>
-
-
-
         </div>
 
         <div class="centrar_boton">
-          <button onclick="window.open('https://www.youtube.com/watch?v=QhOqP3uxB_w', '_blank')" type="button"
-            class=" extender boton guardar">Comenzar</button>
+          <button onclick="window.open('https://www.youtube.com/embed/apr31MFjg08?si=CMaUMLX7CZbj6MB1', '_blank')" type="button" class="extender boton guardar">Comenzar</button>
         </div>
-
-
-
+      </div>
     </section>
 
     <section id="similares">
@@ -144,13 +127,11 @@
       </div>
     </section>
 
-
   </main>
 
   <footer>
     <p>Diseñado por Luis Spataro 2025</p>
   </footer>
-
 
 </body>
 
