--- a/serie-malcolm-in-the-middle-2000.html
+++ b/serie-malcolm-in-the-middle-2000.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Supernatural</title>
+  <title>Malcolm in the Middle</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
@@ -13,27 +13,21 @@
   <header>
     <ul>
       <li><a href="principal.html"><span class="material-symbols-outlined">home</span> Home</a></li>
-
       <li><a href="series.html"><span class="material-symbols-outlined">live_tv</span> Series</a></li>
-
       <li><a href="peliculas.html"><span class="material-symbols-outlined">movie</span> Películas</a></li>
-
       <li><a href="user.html"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
-
-      <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesion</a></li>
-
+      <li><a href="index.html"><span class="material-symbols-outlined">logout</span> Cerrar Sesión</a></li>
     </ul>
   </header>
 
   <main>
 
-    <h1>Supernatural (2005)</h1>
+    <h1>Malcolm in the Middle (2000)</h1>
     <br>
 
     <section class="principal">
-      <!--<img src="img/supernatural-2005.jpg" alt="Supernatural Poster">-->
-      <iframe class=columna height="480" width="640"
-        src="https://www.youtube.com/embed/0L30y8ern3M?autoplay=1"></iframe>
+      <iframe class="columna" height="480" width="640"
+        src="https://www.youtube.com/embed/o6gPg-P5FPg?si=eI83fwHwDIaOMb3r"></iframe>
       <div class="columna">
         <label for="season"><strong>Temporada:</strong>
           <select id="season" name="season">
@@ -45,14 +39,6 @@
             <option value="5">Temporada 5</option>
             <option value="6">Temporada 6</option>
             <option value="7">Temporada 7</option>
-            <option value="8">Temporada 8</option>
-            <option value="9">Temporada 9</option>
-            <option value="10">Temporada 10</option>
-            <option value="11">Temporada 11</option>
-            <option value="12">Temporada 12</option>
-            <option value="13">Temporada 13</option>
-            <option value="14">Temporada 14</option>
-            <option value="15">Temporada 15</option>
           </select>
         </label>
 
@@ -69,58 +55,35 @@
             <option value="8">Capítulo 8</option>
             <option value="9">Capítulo 9</option>
             <option value="10">Capítulo 10</option>
-            <option value="11">Capítulo 11</option>
-            <option value="12">Capítulo 12</option>
-            <option value="13">Capítulo 13</option>
-            <option value="14">Capítulo 14</option>
-            <option value="15">Capítulo 15</option>
-            <option value="16">Capítulo 16</option>
-            <option value="17">Capítulo 17</option>
-            <option value="18">Capítulo 18</option>
-            <option value="19">Capítulo 19</option>
-            <option value="20">Capítulo 20</option>
-            <option value="21">Capítulo 21</option>
-            <option value="22">Capítulo 22</option>
           </select>
         </label>
         <br>
 
         <div class="details">
           <br>
-          <p><strong>Género:</strong> Comedia</p>
+          <p><strong>Género:</strong> Comedia, Familia</p>
           <br>
           <p><strong>Actores:</strong>
-            <a class="links" href="https://es.wikipedia.org/wiki/Jared_Padalecki" target="_blank">Jared Padalecki</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Jensen_Ackles" target="_blank">Jensen Ackles</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Misha_Collins" target="_blank">Misha Collins</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Mark_Sheppard" target="_blank">Mark Sheppard</a>,
-            <a class="links" href="https://es.wikipedia.org/wiki/Katie_Cassidy" target="_blank">Katie Cassidy</a>
+            <a class="links" href="https://es.wikipedia.org/wiki/Frankie_Muniz" target="_blank">Frankie Muniz</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Bryan_Cranston" target="_blank">Bryan Cranston</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Jane_Kaczmarek" target="_blank">Jane Kaczmarek</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Christopher_Kennedy_Masterson" target="_blank">Christopher Masterson</a>,
+            <a class="links" href="https://es.wikipedia.org/wiki/Justin_Berfield" target="_blank">Justin Berfield</a>
           </p>
           <br>
 
           <div class="synopsis">
             <p>
-              Cuando eran niños, Sam y Dean Winchester, perdieron a su madre debido a una misteriosa y demoníaca fuerza
-              supernatural. Posteriormente,
-              su padre los crió para que fueran soldados. Él les enseñó sobre el mal que vive en los rincones obscuros y
-              en las carreteras secundarias
-              de América… y también les enseñó cómo matarlo. Ahora los hermanos Winchester recorren el país en su Chevy
-              Impala del '67, luchando contra
-              todo tipo de amenaza sobrenatural que encuentran en el camino.
+              Malcolm es un niño superdotado que vive con su disfuncional pero divertida familia. A lo largo de las temporadas, lidia con la escuela,
+              sus hermanos problemáticos, y las locuras de sus padres. Esta comedia es conocida por su estilo rompedor, su humor sarcástico y su ruptura de la cuarta pared.
             </p>
           </div>
-
-
-
         </div>
 
         <div class="centrar_boton">
-          <button onclick="window.open('https://www.youtube.com/watch?v=QhOqP3uxB_w', '_blank')" type="button"
-            class=" extender boton guardar">Comenzar</button>
+          <button onclick="window.open('https://www.youtube.com/watch?v=o6gPg-P5FPg', '_blank')" type="button"
+            class="extender boton guardar">Comenzar</button>
         </div>
-
-
-
     </section>
 
     <section id="similares">
@@ -140,17 +103,13 @@
             alt="Lilo y Stitch (2002)"></a>
         <a href="pelicula-guerra-mundial-z-2013.html"><img class="miniatura" src="img/guerra-mundial-z-2013.jpg"
             alt="Guerra Mundial Z (2013)"></a>
-
       </div>
     </section>
-
-
   </main>
 
   <footer>
     <p>Diseñado por Luis Spataro 2025</p>
   </footer>
-
 
 </body>
 
