--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="ordenar_login">
                 <!--se cambio de type=submit a button para que pueda dirigir a principal-->
-                <button onclick="window.location.href='principal.html'" class="guardar boton" type="button">Ingresar</button>
+                <button onclick="window.location.href='principal.html'" class="guardar boton boton_login" type="button">Ingresar</button>
             </div>
 
         </form>
