--- a/pelicula-blancanieves-2025.html
+++ b/pelicula-blancanieves-2025.html
@@ -33,6 +33,7 @@
                 <br>
 
                 <div class="details">
+                    <p><strong>Duración:</strong> 2h 02min</p>
                     <br>
                     <p><strong>Género:</strong> Fantasía, Drama, Aventura</p>
                     <br>
