--- a/pelicula-capitan-america-brave-new-world-2025.html
+++ b/pelicula-capitan-america-brave-new-world-2025.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Guerra Mundial Z</title>
+    <title>Capitán América: Brave New World</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
@@ -22,41 +22,49 @@
 
     <main>
 
-        <h1>Guerra Mundial Z (2013)</h1>
+        <h1>Capitán América: Brave New World (2025)</h1>
         <br>
 
         <section class="principal">
             <iframe class="columna" height="480" width="640"
-                src="https://www.youtube.com/embed/Md6Dvxdr0AQ?autoplay=1"></iframe>
-
+                src="https://www.youtube.com/embed/RXoqRPP-y5c?si=t27ZSaPQUinIS71l"></iframe>
             <div class="columna">
-                <br>
+
+
 
                 <div class="details">
-                    <p><strong>Duración:</strong> 2h 21min</p>
                     <br>
-                    <p><strong>Género:</strong> Terror</p>
+                    <p><strong>Duración:</strong> 2h 15min</p><br>
+                    <p><strong>Género:</strong> Acción, Superhéroes, Ciencia ficción</p>
                     <br>
                     <p><strong>Actores:</strong>
-                        <a class="links" href="https://es.wikipedia.org/wiki/Brad_Pitt" target="_blank">Brad Pitt</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Mireille_Enos" target="_blank">Mireille Enos</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Daniella_Kertesz" target="_blank">Daniella Kertesz</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/James_Badge_Dale" target="_blank">James Badge Dale</a>
+                        <a class="links" href="https://es.wikipedia.org/wiki/Anthony_Mackie" target="_blank">Anthony
+                            Mackie</a>,
+                        <a class="links" href="https://es.wikipedia.org/wiki/Harrison_Ford" target="_blank">Harrison
+                            Ford</a>,
+                        <a class="links" href="https://es.wikipedia.org/wiki/Danny_Ramirez" target="_blank">Danny
+                            Ramirez</a>
                     </p>
                     <br>
 
                     <div class="synopsis">
                         <p>
-                            Una pandemia mundial convierte a los humanos en zombies rabiosos. Gerry Lane, un ex investigador de las Naciones Unidas, es llamado a investigar el brote y encontrar una solución para salvar a la humanidad mientras viaja por todo el mundo enfrentando el caos y el horror.
+                            En esta nueva entrega del Universo Cinematográfico de Marvel, Sam Wilson asume
+                            definitivamente el rol de Capitán América.
+                            Enfrentará amenazas globales mientras lucha por redefinir lo que significa ser el símbolo de
+                            una nación en tiempos convulsionados.
+                            Con nuevas alianzas y viejos enemigos, "Brave New World" marca un nuevo comienzo para los
+                            Vengadores.
                         </p>
                     </div>
                 </div>
 
                 <div class="centrar_boton">
-                    <button onclick="window.open('https://www.youtube.com/watch?v=Md6Dvxdr0AQ', '_blank')" type="button"
-                        class="extender boton guardar">Comenzar</button>
+                    <button onclick="window.open('https://www.youtube.com/watch?v=RXoqRPP-y5c', '_blank')" type="button"
+                        class="extender boton guardar">Ver más</button>
                 </div>
 
+            </div>
         </section>
 
         <section id="similares">
@@ -78,7 +86,6 @@
                         alt="Guerra Mundial Z (2013)"></a>
             </div>
         </section>
-
     </main>
 
     <footer>
