--- a/pelicula-estado-electrico-2025.html
+++ b/pelicula-estado-electrico-2025.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Guerra Mundial Z</title>
+    <title>Estado Eléctrico</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
@@ -22,41 +22,44 @@
 
     <main>
 
-        <h1>Guerra Mundial Z (2013)</h1>
+        <h1>Estado Eléctrico (2025)</h1>
         <br>
 
         <section class="principal">
-            <iframe class="columna" height="480" width="640"
-                src="https://www.youtube.com/embed/Md6Dvxdr0AQ?autoplay=1"></iframe>
-
+            <iframe class="columna" height="480" width="640" src="https://www.youtube.com/embed/9E6AP1jNzkc?"></iframe>
             <div class="columna">
+
                 <br>
 
                 <div class="details">
-                    <p><strong>Duración:</strong> 2h 21min</p>
+
+                    <p><strong>Duración:</strong> 2h 03min</p>
                     <br>
-                    <p><strong>Género:</strong> Terror</p>
+                    <p><strong>Género:</strong> Ciencia ficción, Drama</p>
                     <br>
                     <p><strong>Actores:</strong>
-                        <a class="links" href="https://es.wikipedia.org/wiki/Brad_Pitt" target="_blank">Brad Pitt</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Mireille_Enos" target="_blank">Mireille Enos</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Daniella_Kertesz" target="_blank">Daniella Kertesz</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/James_Badge_Dale" target="_blank">James Badge Dale</a>
+                        <a class="links" href="https://es.wikipedia.org/wiki/Actor1" target="_blank">Actor 1</a>,
+                        <a class="links" href="https://es.wikipedia.org/wiki/Actor2" target="_blank">Actor 2</a>,
+                        <a class="links" href="https://es.wikipedia.org/wiki/Actor3" target="_blank">Actor 3</a>
                     </p>
                     <br>
 
                     <div class="synopsis">
                         <p>
-                            Una pandemia mundial convierte a los humanos en zombies rabiosos. Gerry Lane, un ex investigador de las Naciones Unidas, es llamado a investigar el brote y encontrar una solución para salvar a la humanidad mientras viaja por todo el mundo enfrentando el caos y el horror.
+                            "Estado Eléctrico" es una nueva serie de Netflix que explora las complejidades del futuro
+                            energético
+                            y los conflictos humanos en un mundo dominado por la tecnología y la electricidad. La trama
+                            sigue a un grupo
+                            de personajes que luchan por sobrevivir y encontrar la verdad detrás de una serie de
+                            misteriosos apagones globales.
                         </p>
                     </div>
                 </div>
 
                 <div class="centrar_boton">
-                    <button onclick="window.open('https://www.youtube.com/watch?v=Md6Dvxdr0AQ', '_blank')" type="button"
+                    <button onclick="window.open('https://www.youtube.com/watch?v=9E6AP1jNzkc', '_blank')" type="button"
                         class="extender boton guardar">Comenzar</button>
                 </div>
-
         </section>
 
         <section id="similares">
@@ -78,7 +81,6 @@
                         alt="Guerra Mundial Z (2013)"></a>
             </div>
         </section>
-
     </main>
 
     <footer>
