--- a/pelicula-lilo-y-stitch-2002.html
+++ b/pelicula-lilo-y-stitch-2002.html
@@ -33,6 +33,7 @@
                 <br>
 
                 <div class="details">
+                    <p><strong>Duración:</strong> 1h 36min</p>
                     <br>
                     <p><strong>Género:</strong> Animación, Aventura, Comedia</p>
                     <br>
