--- a/pelicula-una-pelicula-de-minecraft-2025.html
+++ b/pelicula-una-pelicula-de-minecraft-2025.html
@@ -33,6 +33,7 @@
                 <br>
 
                 <div class="details">
+                    <p><strong>Duración:</strong> 2h 07min</p>
                     <br>
                     <p><strong>Género:</strong> Animación, Aventura, Familia</p>
                     <br>
