--- a/reset_password.html
+++ b/reset_password.html
@@ -25,8 +25,8 @@
             </div>
 
             <div class="botones">
-                <button type="submit" class="boton guardar">Envia mail</button>
-                <button onclick="window.location.href='index.html'" type="button" class="boton cancelar">Cancelar</button>
+                <button type="submit" class="guardar boton_reset">Envia mail</button>
+                <button onclick="window.location.href='index.html'" type="button" class="cancelar boton_reset">Cancelar</button>
                 <!--<a href="login.html" class="boton cancelar">Cancelar</a>-->
             </div>
 
