--- a/pelicula-estado-electrico-2025.html
+++ b/pelicula-estado-electrico-2025.html
@@ -38,9 +38,14 @@
                     <p><strong>Género:</strong> Ciencia ficción, Drama</p>
                     <br>
                     <p><strong>Actores:</strong>
-                        <a class="links" href="https://es.wikipedia.org/wiki/Actor1" target="_blank">Actor 1</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Actor2" target="_blank">Actor 2</a>,
-                        <a class="links" href="https://es.wikipedia.org/wiki/Actor3" target="_blank">Actor 3</a>
+                        <a class="links" href="https://es.wikipedia.org/wiki/Millie_Bobby_Brown" target="_blank">Millie
+                            Bobby Brown</a>,
+                        <a class="links" href="https://es.wikipedia.org/wiki/Chris_Prat" target="_blank">Chris
+                            Pratt</a>,
+                        <a class="links" href="https://en.wikipedia.org/wiki/Stanley_Tucci" target="_blank">Stanley
+                            Tucci</a>,
+                        <a class="links" href="https://en.wikipedia.org/wiki/Jason_Alexander" target="_blank">Jason
+                            Alexander</a>
                     </p>
                     <br>
 
