--- a/registro.html
+++ b/registro.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="ordenar">
-                        <label class="a_izquierda" for="apellido">Nueva contraseña</label>
+                        <label class="a_izquierda" for="apellido">Apellido</label>
                         <input class="a_derecha" type="text" id="apellido" name="new_apellido"
                             placeholder="Ingrese Apellido">
                         <br>
